added reg